@@ -1,3 +1,7 @@
+2007-02-22  Francois Dechelle  <francois@dechelle.net>
+
+	* removed last #ifdef LINUX and others, changed configure.in
+
 2006-12-04  Francois Dechelle  <francois@dechelle.net>
 
 	* Fixing compilation problems on FreeBSD
